[gd_scene load_steps=7 format=2]

[ext_resource path="res://imagenes sin fondo/vida.png" type="Texture" id=1]
[ext_resource path="res://imagenes sin fondo/marco.png" type="Texture" id=2]
[ext_resource path="res://imagenes sin fondo/enemigo.png" type="Texture" id=3]
[ext_resource path="res://enemigo.gd" type="Script" id=4]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "corriendo",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "frente",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 56.7632, 92.6273 )

[node name="enemigo" type="KinematicBody2D"]
position = Vector2( 104.652, 49.4975 )
scale = Vector2( 0.462947, 0.419746 )
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2.23026, 1.85356 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 1 )
animation = "corriendo"

[node name="posicion_bala" type="Position2D" parent="AnimatedSprite"]
position = Vector2( 203.877, -11.3265 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 2.38572, 0.313576 )
shape = SubResource( 2 )

[node name="Numero_vida" type="Label" parent="."]
margin_left = -76.1796
margin_top = -103.472
margin_right = -50.1796
margin_bottom = -79.4719
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Barra_vida" type="TextureProgress" parent="."]
margin_left = -47.7019
margin_top = -102.465
margin_right = 284.298
margin_bottom = -72.4645
rect_scale = Vector2( 0.4, 0.8 )
texture_under = ExtResource( 2 )
texture_progress = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 15.5315, 2.88929 )
scale = Vector2( 8.0038, 11.477 )
[connection signal="screen_entered" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
